--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remotion": "4.0.324",
+    "seedrandom": "^3.0.5",
     "zod": "3.22.3"
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.324",
-    "prettier": "3.3.3",
-    "eslint": "9.19.0"
+    "eslint": "9.19.0",
+    "prettier": "3.3.3"
   },
   "scripts": {
     "dev": "remotion studio",
